--- a/docs/api/matching-utilities.mdx
+++ b/docs/api/matching-utilities.mdx
@@ -48,7 +48,8 @@ Accepts the same inputs as `isAllOf` and will return a type guard function that 
 A higher-order function that returns a type guard function that may be used to check whether an action was created by [`createAsyncThunk`](./createAsyncThunk).
 
 ```ts title="isAsyncThunkAction usage"
-import { isAsyncThunkAction, AnyAction } from '@reduxjs/toolkit'
+import { isAsyncThunkAction } from '@reduxjs/toolkit'
+import type { AnyAction } from '@reduxjs/toolkit'
 import { requestThunk1, requestThunk2 } from '@virtual/matchers'
 
 const isARequestAction = isAsyncThunkAction(requestThunk1, requestThunk2)
@@ -65,7 +66,8 @@ function handleRequestAction(action: AnyAction) {
 A higher-order function that returns a type guard function that may be used to check whether an action is a 'pending' action creator from the `createAsyncThunk` promise lifecycle.
 
 ```ts title="isPending usage"
-import { isPending, AnyAction } from '@reduxjs/toolkit'
+import { isPending } from '@reduxjs/toolkit'
+import type { AnyAction } from '@reduxjs/toolkit'
 import { requestThunk1, requestThunk2 } from '@virtual/matchers'
 
 const isAPendingAction = isPending(requestThunk1, requestThunk2)
@@ -82,7 +84,8 @@ function handlePendingAction(action: AnyAction) {
 A higher-order function that returns a type guard function that may be used to check whether an action is a 'fulfilled'' action creator from the `createAsyncThunk` promise lifecycle.
 
 ```ts title="isFulfilled usage"
-import { isFulfilled, AnyAction } from '@reduxjs/toolkit'
+import { isFulfilled } from '@reduxjs/toolkit'
+import type { AnyAction } from '@reduxjs/toolkit'
 import { requestThunk1, requestThunk2 } from '@virtual/matchers'
 
 const isAFulfilledAction = isFulfilled(requestThunk1, requestThunk2)
@@ -99,7 +102,8 @@ function handleFulfilledAction(action: AnyAction) {
 A higher-order function that returns a type guard function that may be used to check whether an action is a 'rejected' action creator from the `createAsyncThunk` promise lifecycle.
 
 ```ts title="isRejected usage"
-import { isRejected, AnyAction } from '@reduxjs/toolkit'
+import { isRejected } from '@reduxjs/toolkit'
+import type { AnyAction } from '@reduxjs/toolkit'
 import { requestThunk1, requestThunk2 } from '@virtual/matchers'
 
 const isARejectedAction = isRejected(requestThunk1, requestThunk2)
@@ -116,7 +120,8 @@ function handleRejectedAction(action: AnyAction) {
 A higher-order function that returns a type guard function that may be used to check whether an action is a 'rejected' action creator from the `createAsyncThunk` promise lifecycle that was created by [`rejectWithValue`](./createAsyncThunk#handling-thunk-errors).
 
 ```ts title="isRejectedWithValue usage"
-import { isRejectedWithValue, AnyAction } from '@reduxjs/toolkit'
+import { isRejectedWithValue } from '@reduxjs/toolkit'
+import type { AnyAction } from '@reduxjs/toolkit'
 import { requestThunk1, requestThunk2 } from '@virtual/matchers'
 
 const isARejectedWithValueAction = isRejectedWithValue(
@@ -143,8 +148,8 @@ First, let's examine an unnecessarily complex example:
 import {
   createAsyncThunk,
   createReducer,
-  PayloadAction,
 } from '@reduxjs/toolkit'
+import type { PayloadAction } from '@reduxjs/toolkit'
 
 interface Data {
   isInteresting: boolean
@@ -213,8 +218,8 @@ import {
   initialState,
   isSpecial,
   isInteresting,
-  Data,
 } from '@virtual/matchers' // This is a fake pkg that provides the types shown above
+import type { Data } from '@virtual/matchers' // This is a fake pkg that provides the types shown above
 
 const loadingReducer = createReducer(initialState, (builder) => {
   builder
@@ -238,8 +243,10 @@ const loadingReducer = createReducer(initialState, (builder) => {
 The function returned by `isAllOf` and `isAnyOf` can also be used as a TypeScript type guard in other contexts.
 
 ```ts title="Using isAllOf as a type guard"
-import { isAllOf, PayloadAction } from '@reduxjs/toolkit'
-import { Data, isSpecial, isInteresting } from '@virtual/matchers' // This is a fake pkg that provides the types shown above
+import { isAllOf } from '@reduxjs/toolkit'
+import type { PayloadAction } from '@reduxjs/toolkit'
+import { isSpecial, isInteresting } from '@virtual/matchers' // This is a fake pkg that provides the types shown above
+import type { Data } from '@virtual/matchers' // This is a fake pkg that provides the types shown above
 
 const isSpecialAndInteresting = isAllOf(isSpecial, isInteresting)
 
@@ -252,7 +259,8 @@ function someFunction(action: PayloadAction<Data>) {
 ```
 
 ```ts title="Using isAnyOf as a type guard"
-import { isAnyOf, PayloadAction } from '@reduxjs/toolkit'
+import { isAnyOf } from '@reduxjs/toolkit'
+import type { PayloadAction } from '@reduxjs/toolkit'
 import { Data, isSpecial, isInteresting } from '@virtual/matchers' // this is a fake pkg that provides the types shown above
 
 const isSpecialOrInteresting = isAnyOf(isSpecial, isInteresting)
