--- a/docs/rtk-query/usage/cache-behavior.mdx
+++ b/docs/rtk-query/usage/cache-behavior.mdx
@@ -92,7 +92,7 @@ export interface Post {
 
 // file: api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -181,7 +181,7 @@ export interface Post {
 
 // file: api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -233,7 +233,7 @@ export interface Post {
 
 // file: src/services/api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -258,7 +258,7 @@ export interface Post {
 
 // file: src/services/api.ts noEmit
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -312,7 +312,7 @@ export interface Post {
 
 // file: src/services/api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -337,7 +337,7 @@ export interface Post {
 
 // file: src/services/api.ts noEmit
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
