--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -239,8 +239,10 @@ const queryFn = (
 This example implements a very basic axios-based `baseQuery` utility.
 
 ```ts title="Basic axios baseQuery"
-import { createApi, BaseQueryFn } from '@reduxjs/toolkit/query'
+import { createApi } from '@reduxjs/toolkit/query'
+import type { BaseQueryFn } from '@reduxjs/toolkit/query'
 import axios, { AxiosRequestConfig, AxiosError } from 'axios'
+import type { AxiosRequestConfig, AxiosError } from 'axios'
 
 // highlight-start
 const axiosBaseQuery =
@@ -363,10 +365,10 @@ declare function tokenReceived(args?: any): void
 declare function loggedOut(): void
 export { tokenReceived, loggedOut }
 // file: baseQueryWithReauth.ts
-import {
+import { fetchBaseQuery } from '@reduxjs/toolkit/query'
+import type {
   BaseQueryFn,
   FetchArgs,
-  fetchBaseQuery,
   FetchBaseQueryError,
 } from '@reduxjs/toolkit/query'
 import { tokenReceived, loggedOut } from './authSlice'
@@ -405,10 +407,10 @@ declare function loggedOut(): void
 export { tokenReceived, loggedOut }
 // file: baseQueryWithReauth.ts
 
-import {
+import { fetchBaseQuery } from '@reduxjs/toolkit/query'
+import type {
   BaseQueryFn,
   FetchArgs,
-  fetchBaseQuery,
   FetchBaseQueryError,
 } from '@reduxjs/toolkit/query'
 import { tokenReceived, loggedOut } from './authSlice'
@@ -490,7 +492,7 @@ The `retry` utility has a `fail` method property attached which can be used to b
 
 ```ts title="Bailing out of error re-tries"
 import { createApi, fetchBaseQuery, retry } from '@reduxjs/toolkit/query/react'
-import { FetchArgs } from '@reduxjs/toolkit/dist/query/fetchBaseQuery'
+import type { FetchArgs } from '@reduxjs/toolkit/dist/query/fetchBaseQuery'
 interface Post {
   id: number
   name: string
@@ -558,13 +560,15 @@ export declare const uuid: () => string
 
 // file: metaBaseQuery.ts
 import {
-  BaseQueryFn,
-  FetchArgs,
   fetchBaseQuery,
-  FetchBaseQueryError,
   createApi,
 } from '@reduxjs/toolkit/query'
-import { FetchBaseQueryMeta } from '@reduxjs/toolkit/dist/query/fetchBaseQuery'
+import type {
+  BaseQueryFn,
+  FetchArgs,
+  FetchBaseQueryError,
+} from '@reduxjs/toolkit/query'
+import type { FetchBaseQueryMeta } from '@reduxjs/toolkit/dist/query/fetchBaseQuery'
 import { uuid } from './idGenerator'
 
 // highlight-start
@@ -657,9 +661,11 @@ export interface Post {
 // file: src/services/api.ts
 import {
   createApi,
+  fetchBaseQuery,
+} from '@reduxjs/toolkit/query/react'
+import type {
   BaseQueryFn,
   FetchArgs,
-  fetchBaseQuery,
   FetchBaseQueryError,
 } from '@reduxjs/toolkit/query/react'
 import type { Post } from './types'
@@ -790,7 +796,8 @@ The normalized cache data will be stored as:
 
 ```ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { createEntityAdapter, EntityState } from '@reduxjs/toolkit'
+import { createEntityAdapter } from '@reduxjs/toolkit'
+import type { EntityState } from '@reduxjs/toolkit'
 
 export interface Post {
   id: number
@@ -841,7 +848,7 @@ export interface User {
 
 // file: api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
-import { Post, User } from './types'
+import type { Post, User } from './types'
 
 const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -888,7 +895,7 @@ export interface Message {
 
 // file: api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
-import { Message } from './types'
+import type { Message } from './types'
 
 const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
@@ -932,9 +939,9 @@ export interface User {
 import {
   createApi,
   fetchBaseQuery,
-  FetchBaseQueryError,
 } from '@reduxjs/toolkit/query'
-import { Post, User } from './types'
+import type { FetchBaseQueryError } from '@reduxjs/toolkit/query'
+import type { Post, User } from './types'
 
 const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/ ' }),
