--- a/docs/rtk-query/usage/mutations.mdx
+++ b/docs/rtk-query/usage/mutations.mdx
@@ -33,7 +33,7 @@ export interface Post {
 
 // file: api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
-import { Post } from './types'
+import type { Post } from './types'
 
 const api = createApi({
   baseQuery: fetchBaseQuery({
