--- a/docs/tutorials/quick-start.mdx
+++ b/docs/tutorials/quick-start.mdx
@@ -229,7 +229,7 @@ ReactDOM.render(
 
 // file: features/counter/Counter.tsx
 import React from 'react'
-import { RootState } from '../../app/store'
+import type { RootState } from '../../app/store'
 import { useSelector, useDispatch } from 'react-redux'
 import { decrement, increment } from './counterSlice'
 
