--- a/docs/rtk-query/usage-with-typescript.mdx
+++ b/docs/rtk-query/usage-with-typescript.mdx
@@ -144,7 +144,8 @@ The `meta` property returned from a `baseQuery` will always be considered as pot
 :::
 
 ```ts title="Simple baseQuery TypeScript example"
-import { createApi, BaseQueryFn } from '@reduxjs/toolkit/query'
+import { createApi } from '@reduxjs/toolkit/query'
+import type { BaseQueryFn } from '@reduxjs/toolkit/query'
 
 const simpleBaseQuery: BaseQueryFn<
   string, // Args
@@ -450,7 +451,7 @@ export interface Post {
 
 // file: api.ts
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Post } from './types'
+import type { Post } from './types'
 
 export const api = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/' }),
