--- a/docs/rtk-query/usage/queries.mdx
+++ b/docs/rtk-query/usage/queries.mdx
@@ -44,7 +44,7 @@ export interface Post {
 // file: api.ts
 // Or from '@reduxjs/toolkit/query/react'
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query'
-import { Post } from './types'
+import type { Post } from './types'
 
 const api = createApi({
   baseQuery: fetchBaseQuery({
