--- a/docs/tutorials/rtk-query.mdx
+++ b/docs/tutorials/rtk-query.mdx
@@ -54,7 +54,7 @@ export type Pokemon = {}
 // file: services/pokemon.ts
 // Need to use the React-specific entry point to import createApi
 import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react'
-import { Pokemon } from './types'
+import type { Pokemon } from './types'
 
 // highlight-start
 // Define a service using a base URL and expected endpoints
