Removes duplicate import

--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -241,7 +241,7 @@ This example implements a very basic axios-based `baseQuery` utility.
 ```ts title="Basic axios baseQuery"
 import { createApi } from '@reduxjs/toolkit/query'
 import type { BaseQueryFn } from '@reduxjs/toolkit/query'
-import axios, { AxiosRequestConfig, AxiosError } from 'axios'
+import axios from 'axios'
 import type { AxiosRequestConfig, AxiosError } from 'axios'
 
 // highlight-start
