fixing section name

--- a/docs/rtk-query/usage/examples.mdx
+++ b/docs/rtk-query/usage/examples.mdx
@@ -76,7 +76,7 @@ The example has some intentionally wonky behavior... when editing the name of a 
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
 
-## React with GraphQL with custom client
+## React GraphQL with custom client
 
 <iframe
   src="https://codesandbox.io/s/determined-shannon-iv2p5x"
