Updates docs to use type-only imports (#2417)

--- a/docs/api/configureStore.mdx
+++ b/docs/api/configureStore.mdx
@@ -138,7 +138,7 @@ of `[offline, applyMiddleware, devToolsExtension]`.
 
 ```ts
 // file: reducers.ts noEmit
-import { Reducer } from '@reduxjs/toolkit'
+import type { Reducer } from '@reduxjs/toolkit'
 declare const rootReducer: Reducer<{}>
 export default rootReducer
 
@@ -155,12 +155,12 @@ const store = configureStore({ reducer: rootReducer })
 
 ```ts no-transpile
 // file: todos/todosReducer.ts noEmit
-import { Reducer } from '@reduxjs/toolkit'
+import type { Reducer } from '@reduxjs/toolkit'
 declare const reducer: Reducer<{}>
 export default reducer
 
 // file: visibility/visibilityReducer.ts noEmit
-import { Reducer } from '@reduxjs/toolkit'
+import type { Reducer } from '@reduxjs/toolkit'
 declare const reducer: Reducer<{}>
 export default reducer
 
