Document `merge` option

--- a/docs/rtk-query/api/createApi.mdx
+++ b/docs/rtk-query/api/createApi.mdx
@@ -504,6 +504,14 @@ _(optional, only for query endpoints)_
 
 [examples](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.serializeQueryArgs)
 
+### `merge`
+
+_(optional, only for query endpoints)_ w
+
+[summary](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.merge)
+
+[examples](docblock://query/endpointDefinitions.ts?token=QueryExtraOptions.merge)
+
 ### `onQueryStarted`
 
 _(optional)_
